# traj_bringup

./: CMakeLists.txt  README.md  package.xml
launch/: full_system.launch.py  hardware.launch.py
rviz/: RR03.rviz
scripts/: launch_dynamic_obstacle.py  verify_system.sh
tmux/: dynamic_obstacle.yaml
