<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>traj_bringup</name>
  <version>0.1.0</version>
  <description>Bringup package for trajectory generator ground robot system</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>trajectory_generator</exec_depend>
  <exec_depend>red_rover_sim</exec_depend>
  <exec_depend>pure_pursuit_tracker</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
